# velcro

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
docs/: concepts.md  crm-example.md  index.md  installation.md  quickstart.md
docs/customisations/: access-control.md  custom-actions.md  overview.md  templates.md
docs/guides/: context-hooks.md  fields-and-rendering.md  forms.md  htmx.md  messages-and-redirects.md  pagination.md  querysets.md  search-ordering-filtering.md  urls-and-namespaces.md
docs/references/: api-tree.md  defaults.md
src/velcro/: __init__.py  actions.py  renderers.py  views.py
src/velcro/templates/velcro/: object_confirm_delete.html  object_detail.html  object_form.html  object_list.html
src/velcro/templates/velcro/partial/: messages.html
tests/: models.py  settings.py  test_access.py  test_actions.py  test_filtering.py  test_htmx.py  test_templates.py  test_urls.py  test_views.py
tests/templates/dashboard/: bookmark_list.html
tests/templates/tests/: bookmark_archived.html  bookmark_confirm_delete.html  bookmark_detail.html  bookmark_form.html  bookmark_list.html
